test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-shared-from-oknil-shared.good
init-field-arg-nonnil-shared-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-shared-from-oknil-shared.chpl:10: error: invalid copy-initialization
init-field-arg-nonnil-shared-from-oknil-shared.chpl:10: error: Cannot initialize 'shared MyClass' from a 'shared MyClass?'
  init-field-arg-nonnil-shared-from-oknil-shared.chpl:14: called as MyRecord.init(rhs: shared MyClass?)
